k8s/prod/uba-accounts-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uba-accounts-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: ubaAccounts
  template:
    metadata:
      labels:
        component: ubaAccounts
    spec:
      containers:
        - name: uba-accounts
          image: sujits259/uba-accounts:1.4-k8s
          ports:
            - containerPort: 8001
