k8s/prod/uba-ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uba-ingress-service
  annotations:
    ingressClassName: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uba-accounts-cluster-ip-service
                port:
                  number: 9001
